--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
 
     <groupId>site.yl</groupId>
-    <artifactId>template</artifactId>
+    <artifactId>YJson</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
@@ -19,8 +19,11 @@
 
 
     <dependencies>
-
-
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
     </dependencies>
 
     <repositories>
